--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-ul li {
+.red {
   font-color:red;
   text-color:red;
   color:red;
   padding: 5px;
   margin-left: 35px;
 }
-ol li {
+.text {
   font-size: 24px;
   padding: 5px;
   margin-left: 35px;
