--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 .red1 {
   height:100px;
   background-color:red;
+  bottom-margin:10px;
 }
 
 .red2 {
   height:100px;
   background-color:red;
+   bottom-margin:10px;
 }
 
 .red3 {
   height:100px;
   background-color:red;
+   bottom-margin:10px;
 }
