--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 .red1 {
   height:100px;
-  background-color:red;
+  width:100px;
+  background:red;
   bottom-margin:10px;
 }
 
 .red2 {
   height:100px;
-  background-color:red;
+  width:100px;
+  background:red;
    bottom-margin:10px;
 }
 
 .red3 {
   height:100px;
-  background-color:red;
+  width:100px;
+  background:red;
    bottom-margin:10px;
 }
