--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 .red1 {
   height:100px;
   width:100px;
-  background:red;
+  background-color:red;
   bottom-margin:10px;
 }
 
 .red2 {
   height:100px;
   width:100px;
-  background:blue;
+  background-color:blue;
    bottom-margin:10px;
 }
 
 .red3 {
   height:100px;
   width:100px;
-  background:red;
+  background-color:red;
    bottom-margin:10px;
 }
