--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
   height:100px;
   width:100px;
   background-color:red;
-  bottom-margin:10px;
+  margin:10px;
 }
 
 .red2 {
   height:100px;
   width:100px;
   background-color:blue;
-   bottom-margin:10px;
+   margin:10px;
 }
 
 .red3 {
   height:100px;
   width:100px;
   background-color:red;
-   bottom-margin:10px;
+   margin:10px;
 }
