--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
   height:100px;
   width:100px;
   background-color:red;
-  margin:10px;
+  margin-bottom:10px;
 }
 
 .red2 {
   height:100px;
   width:100px;
-  background-color:blue;
-   margin:10px;
+  background-color:red;
+   margin-bottom:10px;
 }
 
 .red3 {
   height:100px;
   width:100px;
   background-color:red;
-   margin:10px;
+   margin-bottom:10px;
 }
