--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 .red1 {
   height:100px;
   width:100px;
-  background-color:red;
+  background:red;
   margin-bottom:10px;
 }
 
 .red2 {
   height:100px;
   width:100px;
-  background-color:red;
+  background:red;
    margin-bottom:10px;
 }
 
 .red3 {
   height:100px;
   width:100px;
-  background-color:red;
+  background:red;
    margin-bottom:10px;
 }
